0x0A-python-inheritance/tests/1-my_list.txt
The ``1-my_list.py`` module
======================

Using ``MyList``
-------------------

This is an example text file in reStructuredText format.  First import
``MyList`` from the ``1-my_list`` module:

	>>> add_integer = __import__('0-add_integer').add_integer

	Now use it:
	>>> add_integer()
	Traceback (most recent call last):
	...
	TypeError: add_integer() missing 1 required positional argument: 'a'

	>>> add_integer(None)
	Traceback (most recent call last):
	...
	TypeError: a must be an integer

	>>> add_integer(None)
	Traceback (most recent call last):
	...
	TypeError: a must be an integer

	>>> add_integer(1)
	99

	>>> add_integer(1.0)
	99

	>>> add_integer(1, 2)
	3

	>>> add_integer(1.0, 3.0)
	4

	>>> add_integer(1, 3.0)
	4

	>>> add_integer(1.0, 3)
	4

	>>> add_integer("1")
	Traceback (most recent call last):
	...
	TypeError: a must be an integer

